# freight-carrier-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_ARTIFACTS.md  ARCHITECTURE.md  DECISIONS.md
evals/: goldens.py  run.py  schema.py  scorers.py  task.py
freight_agent/: __main__.py  agent.py  cli.py  config.py  db.py  models.py  rates.py  retrieval.py  tools.py
freight_agent/api/: __init__.py  app.py  deps.py  schemas.py
freight_agent/db/: __init__.py  engine.py  models.py  schemas.py
freight_agent/ingestion/: __init__.py  embed.py  extract.py  llm.py  loaders.py  parse_emails.py  reconcile.py  transcribe_calls.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ResultView.tsx
frontend/lib/: api.ts  types.ts
runbooks/: 01-data-foundation.md  02-ingestion.md  03-agent.md  04-product-surface.md  05-eval-deploy.md  README.md
tests/: conftest.py  test_agent.py  test_api.py  test_data_foundation.py  test_evals.py  test_ingestion.py
